[gd_scene load_steps=14 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://images/32x32 green square.png" type="Texture" id=4]
[ext_resource path="res://MasterParticleController.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 34.2345

[sub_resource type="Gradient" id=9]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, -0.608162, 0, 0, Vector2( 1, 0.237913 ), -0.622824, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=2]
lifetime_randomness = 0.5
trail_divisor = 10
trail_size_modifier = SubResource( 6 )
trail_color_modifier = SubResource( 8 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 60.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 210.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.13
scale_random = 0.1
color_ramp = SubResource( 10 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="World" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 508, 333 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="Player"]

[node name="engine" type="Line2D" parent="Player"]

[node name="bulletTimer" type="Timer" parent="Player"]

[node name="Particles2D_old" type="Particles2D" parent="Player"]
visible = false
emitting = false
amount = 1000
lifetime = 3.0
local_coords = false
process_material = SubResource( 2 )
texture = ExtResource( 4 )

[node name="MasterParticleController" parent="Player" instance=ExtResource( 5 )]
emitting = true

[node name="bullet" parent="." instance=ExtResource( 3 )]

[connection signal="timeout" from="Player/bulletTimer" to="Player" method="_on_bulletTimer_timeout"]

[editable path="bullet"]
